[gd_scene load_steps=18 format=3 uid="uid://da0knsa3x3m8s"]

[ext_resource type="Script" path="res://modules/remi/character.gd" id="1_80owj"]
[ext_resource type="Texture2D" uid="uid://butxrv0bo4kk3" path="res://modules/remi/assets/graphics/hud_misc.svg" id="2_4n2mt"]
[ext_resource type="Texture2D" uid="uid://e8bbqf57kb6s" path="res://modules/remi/assets/graphics/hud_life_bar_under.svg" id="2_pvr1i"]
[ext_resource type="PackedScene" uid="uid://dtsji046cqoml" path="res://modules/corentin/pointer.tscn" id="2_v4deo"]
[ext_resource type="Texture2D" uid="uid://dbteomwcevbjf" path="res://modules/remi/assets/graphics/hud_life_bar_over.svg" id="3_0yr67"]
[ext_resource type="Texture2D" uid="uid://coyqq37vgsfmg" path="res://modules/remi/assets/graphics/hud_life_bar_progress.svg" id="4_jwpv6"]
[ext_resource type="Texture2D" uid="uid://dgx137dfls3lv" path="res://modules/remi/assets/graphics/hud_symbol.svg" id="7_bb6mb"]
[ext_resource type="Texture2D" uid="uid://bmf21cahl3c0w" path="res://modules/remi/assets/graphics/hud_astronaut.svg" id="8_37epb"]
[ext_resource type="Texture2D" uid="uid://cyd4fllsiutm1" path="res://modules/remi/assets/graphics/overlay.svg" id="9_a02gy"]
[ext_resource type="Material" uid="uid://ckabik00r1583" path="res://modules/corentin/Shaders/hudAstronaut_mat.tres" id="9_hppl6"]
[ext_resource type="Texture2D" uid="uid://cxlhqj2es27g3" path="res://modules/remi/assets/graphics/settings_border.svg" id="11_4cjk1"]
[ext_resource type="Script" path="res://modules/remi/Camera2D.gd" id="11_dulko"]
[ext_resource type="FontFile" uid="uid://djp2q48rlxdbs" path="res://modules/remi/assets/fonts/Hacked-KerX.ttf" id="12_s52nj"]
[ext_resource type="FontFile" uid="uid://b0ihnar8ojegy" path="res://modules/remi/assets/fonts/Drexs-z8gB3.ttf" id="13_on0xv"]
[ext_resource type="PackedScene" uid="uid://dlvwfmqkkgucd" path="res://modules/odilon/fx/normalized_sound.tscn" id="15_svdb1"]
[ext_resource type="AudioStream" uid="uid://dngeljoje5vjy" path="res://modules/remi/assets/audio/used/general/tween_0.wav" id="16_lao06"]
[ext_resource type="AudioStream" uid="uid://dycslqy3tb1ee" path="res://modules/remi/assets/audio/used/general/i_1.wav" id="17_y7hws"]

[node name="Character" type="Node2D" groups=["character"]]
script = ExtResource("1_80owj")
POINTER_NODE = ExtResource("2_v4deo")

[node name="CanvasLayerOverlay" type="CanvasLayer" parent="."]

[node name="Overlay" type="TextureRect" parent="CanvasLayerOverlay"]
offset_left = -33.0
offset_top = -73.0
offset_right = 2424.0
offset_bottom = 1511.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("9_a02gy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRectHit" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="ColorRectHeal" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0, 1)

[node name="LabelHit" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -26.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_fonts/font = ExtResource("12_s52nj")
theme_override_font_sizes/font_size = 60
text = "- 1"
horizontal_alignment = 1

[node name="LabelHeal" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -26.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_fonts/font = ExtResource("12_s52nj")
theme_override_font_sizes/font_size = 60
text = "+ 1"
horizontal_alignment = 1

[node name="HP_hud" type="TextureRect" parent="CanvasLayer"]
offset_left = 38.0
offset_top = 38.0
offset_right = 953.0
offset_bottom = 521.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("2_4n2mt")

[node name="HPBar" type="HBoxContainer" parent="CanvasLayer/HP_hud"]
layout_mode = 1
offset_left = 94.0
offset_top = 34.0
offset_right = 1609.0
offset_bottom = 61.0
mouse_filter = 2

[node name="CharacterHPBar" type="TextureProgressBar" parent="CanvasLayer/HP_hud/HPBar"]
custom_minimum_size = Vector2(500, 27)
layout_mode = 2
mouse_filter = 2
step = 0.0
nine_patch_stretch = true
texture_under = ExtResource("2_pvr1i")
texture_over = ExtResource("3_0yr67")
texture_progress = ExtResource("4_jwpv6")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HP_hud/HPBar"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
texture = ExtResource("7_bb6mb")
expand_mode = 3

[node name="AstronautAnchor" type="Node2D" parent="CanvasLayer/HP_hud"]
position = Vector2(192, 210)

[node name="HudAstronaut" type="TextureRect" parent="CanvasLayer/HP_hud/AstronautAnchor"]
material = ExtResource("9_hppl6")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -96.5
offset_right = 39.0
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8_37epb")

[node name="UpgradeMenu" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -347.0
offset_top = -165.0
offset_right = 348.0
offset_bottom = 254.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/UpgradeMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7125, 0.95, 0.827292, 1)
theme_override_fonts/font = ExtResource("12_s52nj")
theme_override_font_sizes/font_size = 80
text = "UPGRADE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="GridContainer" parent="CanvasLayer/UpgradeMenu"]
layout_mode = 2
size_flags_vertical = 3
columns = 3

[node name="StatsPanel" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -486.0
offset_top = 43.0
offset_right = 429.0
offset_bottom = 526.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
mouse_filter = 2
texture = ExtResource("11_4cjk1")
flip_h = true
flip_v = true

[node name="Room" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 852.0
offset_top = 51.0
offset_right = 1082.0
offset_bottom = 139.0
mouse_filter = 2
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/Room"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.593333, 1)
theme_override_fonts/font = ExtResource("12_s52nj")
theme_override_font_sizes/font_size = 80
text = "ROOM"

[node name="SpacingHack" type="Label" parent="CanvasLayer/Room"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.593333, 1)
theme_override_fonts/font = ExtResource("12_s52nj")
theme_override_font_sizes/font_size = 80

[node name="SpacingHack2" type="Label" parent="CanvasLayer/Room"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.593333, 1)
theme_override_fonts/font = ExtResource("12_s52nj")
theme_override_font_sizes/font_size = 80

[node name="Number" type="Label" parent="CanvasLayer/Room"]
layout_mode = 2
theme_override_colors/font_color = Color(0.670588, 0.929412, 0.8, 1)
theme_override_fonts/font = ExtResource("12_s52nj")
theme_override_font_sizes/font_size = 80
text = "1
"

[node name="Vitality" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -244.0
offset_top = 130.0
offset_right = -71.0
offset_bottom = 152.0
grow_horizontal = 0
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/Vitality"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7125, 0.95, 0.827292, 1)
theme_override_fonts/font = ExtResource("13_on0xv")
theme_override_font_sizes/font_size = 16
text = "VITALITY"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Vitality"]
layout_mode = 2

[node name="RegenProgressBar" type="TextureProgressBar" parent="CanvasLayer/Vitality/CenterContainer"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
max_value = 20.0
nine_patch_stretch = true
texture_under = ExtResource("2_pvr1i")
texture_over = ExtResource("3_0yr67")
texture_progress = ExtResource("4_jwpv6")

[node name="Damage" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -244.0
offset_top = 152.0
offset_right = -71.0
offset_bottom = 174.0
grow_horizontal = 0
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/Damage"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7125, 0.95, 0.827292, 1)
theme_override_fonts/font = ExtResource("13_on0xv")
theme_override_font_sizes/font_size = 16
text = "STRENGTH"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Damage"]
layout_mode = 2

[node name="DamageProgressBar" type="TextureProgressBar" parent="CanvasLayer/Damage/CenterContainer"]
custom_minimum_size = Vector2(82, 10)
layout_mode = 2
max_value = 20.0
nine_patch_stretch = true
texture_under = ExtResource("2_pvr1i")
texture_over = ExtResource("3_0yr67")
texture_progress = ExtResource("4_jwpv6")

[node name="Update" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -244.0
offset_top = 174.0
offset_right = -71.0
offset_bottom = 196.0
grow_horizontal = 0
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/Update"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7125, 0.95, 0.827292, 1)
theme_override_fonts/font = ExtResource("13_on0xv")
theme_override_font_sizes/font_size = 16
text = "UPDATE"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Update"]
layout_mode = 2

[node name="UpdateProgressBar" type="TextureProgressBar" parent="CanvasLayer/Update/CenterContainer"]
custom_minimum_size = Vector2(105, 10)
layout_mode = 2
max_value = 3.0
nine_patch_stretch = true
texture_under = ExtResource("2_pvr1i")
texture_over = ExtResource("3_0yr67")
texture_progress = ExtResource("4_jwpv6")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
script = ExtResource("11_dulko")

[node name="Audio" type="Node2D" parent="."]

[node name="Hit" parent="Audio" instance=ExtResource("15_svdb1")]
stream = ExtResource("16_lao06")

[node name="Heal" parent="Audio" instance=ExtResource("15_svdb1")]
stream = ExtResource("17_y7hws")
